WIP: configurations added via files or env vars
